--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
     <p>Shengkai Zhang will receive his Ph.D. degree from the 
 <a href="http://ei.hust.edu.cn/" target="_blank" rel="noopener">EIC Department</a>, Huazhong University of Science and Technology 
 <a href="https://www.hust.edu.cn" target="_blank" rel="noopener">(HUST)</a> this winter. His advisor is 
-<a href="http://ei.hust.edu.cn/lab/SINC-lab/CN/jiangtao.html" target="_blank" rel="noopener">Prof. Tao Jiang</a>. He received his M.Sc and M.Phil degrees from HUST and Hong Kong University of Science and Technology 
+<a href="https://scholar.google.com/citations?user=9BEmtIwAAAAJ&amp;hl=en" target="_blank" rel="noopener">Prof. Tao Jiang</a>. He received his M.Sc and M.Phil degrees from HUST and Hong Kong University of Science and Technology 
 <a href="https://www.ust.hk" target="_blank" rel="noopener">(HKUST)</a> in 2012 and 2015, respectively.</p>
 
 
