--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
     </a>
     
     <div class="card-text">
-      <h4><a href="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/" >RF-Visual State Estimation in Textureless Venues</a></h4>
+      <h4><a href="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/" >RF-Visual SLAM in Textureless Venues</a></h4>
       
       <div class="article-style">
         <p>We combine the RF and visual sensing modalities and take the best of both worlds.</p>
