--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
       <h4><a href="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/" >RF-Visual SLAM in Textureless Venues</a></h4>
       
       <div class="article-style">
-        <p>We combine the RF and visual sensing modalities and take the best of both worlds.</p>
+        <p>We combine RF and visual sensing modalities and take the best of both worlds.</p>
       </div>
       
     </div>
