--- a/project/index.html
+++ b/project/index.html
@@ -693,7 +693,7 @@
       <h2><a href="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/" >RF-Visual SLAM in Textureless Venues</a></h2>
       <div class="article-style">
         
-          We combine the RF and visual sensing modalities and take the best of both worlds.
+          We combine RF and visual sensing modalities and take the best of both worlds.
         
       </div>
     </div>
