--- a/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/index.html
+++ b/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/index.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="We combine the RF and visual sensing modalities and take the best of both worlds.">
+  <meta name="description" content="We combine RF and visual sensing modalities and take the best of both worlds.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/">
@@ -275,7 +275,7 @@
   <meta property="og:site_name" content="张胜凯">
   <meta property="og:url" content="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/">
   <meta property="og:title" content="RF-Visual SLAM in Textureless Venues | 张胜凯">
-  <meta property="og:description" content="We combine the RF and visual sensing modalities and take the best of both worlds."><meta property="og:image" content="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/featured.jpg">
+  <meta property="og:description" content="We combine RF and visual sensing modalities and take the best of both worlds."><meta property="og:image" content="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/featured.jpg">
   <meta property="twitter:image" content="/project/rf-assisted-monocular-visual-state-estimation-in-textureless-environments/featured.jpg"><meta property="og:locale" content="en-us">
   
     
@@ -327,7 +327,7 @@
       "url": "/images/icon_hu4578e1fc9e028351bfb752007350c908_42291_192x192_fill_lanczos_center_2.png"
     }
   },
-  "description": "We combine the RF and visual sensing modalities and take the best of both worlds."
+  "description": "We combine RF and visual sensing modalities and take the best of both worlds."
 }
 </script>
 
