update demo and cv

--- a/index.html
+++ b/index.html
@@ -1299,6 +1299,14 @@
   
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/files/demo.mp4" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 
