--- a/publication/wins/index.html
+++ b/publication/wins/index.html
@@ -823,6 +823,14 @@
   
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="/files/demo.mp4" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 
