--- a/index.html
+++ b/index.html
@@ -1173,6 +1173,11 @@
   
   
   
+  
+  <a href="/publication/rover_twc/">
+      <img src="/publication/rover_twc/featured_hucb56bb10cc7d181da0dbbb0c1e502958_2442536_1836x834_resize_q90_lanczos.jpg" class="article-banner" alt="Robot-assisted Backscatter Localization for IoT Applications">
+  </a>
+  
 
   <h3 class="article-title mb-1 mt-3">
     <a href="/publication/rover_twc/">Robot-assisted Backscatter Localization for IoT Applications</a>
@@ -1602,11 +1607,6 @@
 
   
   
-  
-  
-  <a href="/publication/rover/">
-      <img src="/publication/rover/featured_hucb56bb10cc7d181da0dbbb0c1e502958_2442536_1836x834_resize_q90_lanczos.jpg" class="article-banner" alt="Localizing Backscatters by a Single Robot With Zero Start-up Cost">
-  </a>
   
 
   <h3 class="article-title mb-1 mt-3">
