--- a/publication/d2d/index.html
+++ b/publication/d2d/index.html
@@ -997,7 +997,7 @@
 
       <div class="media-body">
         <h5 class="card-title"><a href="http://www.sheng-kai.top/">Shengkai Zhang</a></h5>
-        <h6 class="card-subtitle">Ph.D. Candidate</h6>
+        <h6 class="card-subtitle">Associate Professor</h6>
         <p class="card-text">My research interests include aerial robotics, wireless sensing, state estimation, and SLAM.</p>
         <ul class="network-icon" aria-hidden="true">
   
