--- a/talk/index.html
+++ b/talk/index.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="Ph.D. Candidate">
+  <meta name="description" content="Associate Professor">
 
   
   <link rel="alternate" hreflang="en-us" href="http://www.sheng-kai.top/talk/">
@@ -278,7 +278,7 @@
   <meta property="og:site_name" content="Shengkai">
   <meta property="og:url" content="http://www.sheng-kai.top/talk/">
   <meta property="og:title" content="Recent &amp; Upcoming Talks | Shengkai">
-  <meta property="og:description" content="Ph.D. Candidate"><meta property="og:image" content="http://www.sheng-kai.top/images/icon_hu4578e1fc9e028351bfb752007350c908_42291_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Associate Professor"><meta property="og:image" content="http://www.sheng-kai.top/images/icon_hu4578e1fc9e028351bfb752007350c908_42291_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="http://www.sheng-kai.top/images/icon_hu4578e1fc9e028351bfb752007350c908_42291_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
