--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 
     <p>Shengkai Zhang (张胜凯) joined Wuhan University of Technology (WHUT) in 2021 after receiving his Ph.D. degree from the 
 <a href="http://ei.hust.edu.cn/" target="_blank" rel="noopener">EIC Department</a>, Huazhong University of Science and Technology 
-<a href="https://www.hust.edu.cn" target="_blank" rel="noopener">(HUST)</a> this winter. He received his M.Sc and M.Phil degrees from HUST and Hong Kong University of Science and Technology 
+<a href="https://www.hust.edu.cn" target="_blank" rel="noopener">(HUST)</a>. He received his M.Sc and M.Phil degrees from HUST and Hong Kong University of Science and Technology 
 <a href="https://www.ust.hk" target="_blank" rel="noopener">(HKUST)</a> in 2012 and 2014, respectively. From 2015 to 2016, he joined HKUST-DJI Joint Innovation Laboratory 
 <a href="http://uav.ust.hk/" target="_blank" rel="noopener">(HDJI Lab)</a> as a research assistant.</p>
 
