--- a/project/uwb-nlos-identification/index.html
+++ b/project/uwb-nlos-identification/index.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="It is well known that the ultrawide-band raning in non-line-of-sight (NLOS) propagation is biased due to that the diiferent propagation speed of RF signals when going through other materials. Therefore, identifying the ranging results in NLOS conditions is siginificant in improving the robustness of UWB localization.">
+  <meta name="description" content="It is well known that the ultrawide-band raning in non-line-of-sight (NLOS) propagation is biased due to that the diiferent propagation speed when going through other materials. Identifying the ranging results in NLOS conditions is siginificant in improving the robustness of UWB localization.">
 
   
   <link rel="alternate" hreflang="en-us" href="http://www.sheng-kai.top/project/uwb-nlos-identification/">
@@ -275,7 +275,7 @@
   <meta property="og:site_name" content="Shengkai">
   <meta property="og:url" content="http://www.sheng-kai.top/project/uwb-nlos-identification/">
   <meta property="og:title" content="UWB NLOS Identification | Shengkai">
-  <meta property="og:description" content="It is well known that the ultrawide-band raning in non-line-of-sight (NLOS) propagation is biased due to that the diiferent propagation speed of RF signals when going through other materials. Therefore, identifying the ranging results in NLOS conditions is siginificant in improving the robustness of UWB localization."><meta property="og:image" content="http://www.sheng-kai.top/project/uwb-nlos-identification/featured.png">
+  <meta property="og:description" content="It is well known that the ultrawide-band raning in non-line-of-sight (NLOS) propagation is biased due to that the diiferent propagation speed when going through other materials. Identifying the ranging results in NLOS conditions is siginificant in improving the robustness of UWB localization."><meta property="og:image" content="http://www.sheng-kai.top/project/uwb-nlos-identification/featured.png">
   <meta property="twitter:image" content="http://www.sheng-kai.top/project/uwb-nlos-identification/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -327,7 +327,7 @@
       "url": "http://www.sheng-kai.top/images/icon_hu4578e1fc9e028351bfb752007350c908_42291_192x192_fill_lanczos_center_3.png"
     }
   },
-  "description": "It is well known that the ultrawide-band raning in non-line-of-sight (NLOS) propagation is biased due to that the diiferent propagation speed of RF signals when going through other materials. Therefore, identifying the ranging results in NLOS conditions is siginificant in improving the robustness of UWB localization."
+  "description": "It is well known that the ultrawide-band raning in non-line-of-sight (NLOS) propagation is biased due to that the diiferent propagation speed when going through other materials. Identifying the ranging results in NLOS conditions is siginificant in improving the robustness of UWB localization."
 }
 </script>
 
