--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
       <h4><a href="/project/uwb-nlos-identification/" >UWB NLOS Identification</a></h4>
       
       <div class="article-style">
-        <p>It is well known that the ultrawide-band raning in non-line-of-sight (NLOS) propagation is biased due to that the diiferent propagation speed when going through other materials. Identifying the ranging results in NLOS conditions is siginificant in improving the robustness of UWB localization.</p>
+        <p>Ultrawide-band raning in non-line-of-sight (NLOS) propagation is biased due to the diiferent propagation speed going through walls. Identifying the ranging results in NLOS conditions could improve the robustness of UWB localization.</p>
       </div>
       
     </div>
