--- a/index.html
+++ b/index.html
@@ -795,7 +795,9 @@
     
     <h1>Biography</h1>
 
-    <p>Shengkai Zhang (张胜凯) joined Wuhan University of Technology (WUT) in 2021 after receiving his Ph.D. degree from the 
+    <p>Shengkai Zhang (张胜凯) joined 
+<a href="http://wutinfo.whut.edu.cn/" target="_blank" rel="noopener">School of Information Engineering</a>, Wuhan University of Technology 
+<a href="https://www.whut.edu.cn/" target="_blank" rel="noopener">(WUT)</a> in 2021 after receiving his Ph.D. degree from the 
 <a href="http://ei.hust.edu.cn/" target="_blank" rel="noopener">EIC Department</a>, Huazhong University of Science and Technology 
 <a href="https://www.hust.edu.cn" target="_blank" rel="noopener">(HUST)</a>. He received his M.Sc and M.Phil degrees from HUST and Hong Kong University of Science and Technology 
 <a href="https://www.ust.hk" target="_blank" rel="noopener">(HKUST)</a> in 2012 and 2014, respectively. From 2015 to 2016, he joined HKUST-DJI Joint Innovation Laboratory 
