update mmemp url

--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
 <a href="http://wutinfo.whut.edu.cn/" target="_blank" rel="noopener">School of Information Engineering</a>, Wuhan University of Technology 
 <a href="https://www.whut.edu.cn/" target="_blank" rel="noopener">(WUT)</a> in 2021 after receiving his Ph.D. degree from the 
 <a href="http://ei.hust.edu.cn/" target="_blank" rel="noopener">EIC Department</a>, Huazhong University of Science and Technology 
-<a href="https://www.hust.edu.cn" target="_blank" rel="noopener">(HUST)</a>. His supervisors are 
+<a href="https://www.hust.edu.cn" target="_blank" rel="noopener">(HUST)</a>. His PhD supervisor is 
 <a href="https://eic.hust.edu.cn/professor/wangwei/index.html" target="_blank" rel="noopener">Prof. Wei Wang</a> and 
 <a href="http://csee.hnu.edu.cn/people/jianghongbo" target="_blank" rel="noopener">Prof. Hongbo Jiang</a>. He received his M.Sc and M.Phil degrees from HUST and Hong Kong University of Science and Technology 
 <a href="https://www.ust.hk" target="_blank" rel="noopener">(HKUST)</a> in 2012 and 2014, respectively. From 2015 to 2016, he joined HKUST-DJI Joint Innovation Laboratory 
@@ -1211,7 +1211,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/bella-jy/mmEMP/tree/main" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/ClarenceZSK/mmEMP" target="_blank" rel="noopener">
   Code
 </a>
 
