--- a/publication/index.html
+++ b/publication/index.html
@@ -1070,7 +1070,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/bella-jy/mmEMP/tree/main" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/ClarenceZSK/mmEMP" target="_blank" rel="noopener">
   Code
 </a>
 
