--- a/publication/mmemp/index.html
+++ b/publication/mmemp/index.html
@@ -781,7 +781,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/bella-jy/mmEMP/tree/main" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/ClarenceZSK/mmEMP" target="_blank" rel="noopener">
   Code
 </a>
 
